--- a/ourShef/src/main/resources/application.yml
+++ b/ourShef/src/main/resources/application.yml
@@ -1,10 +1,12 @@
 spring:
+  messages:
+    basename: errors
+
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3307/myShefDB?serverTimezone=Asia/Seoul&characterEncoding=UTF-8
     password: 1234
     username: shef
-
     
   jpa:
     hibernate:
@@ -14,6 +16,7 @@ spring:
 #        show_sql: true
         format_sql: true
 #        use_sql_comments: true
+
         
     database-platform: org.hibernate.dialect.MySQL5InnoDBDialect
     generate-ddl: false
