validation modification rejectValue

--- a/ourShef/src/main/resources/errors.properties
+++ b/ourShef/src/main/resources/errors.properties
@@ -1,9 +1,21 @@
-required.joinForm.profileImgFile=프로필 이미지는 필수입니다.
-required.joinForm.nickName=닉네임은 필수입니다.
+#Object Field
 
+#Field
+required.joinFormProfileImgFile=가입시 프로필 이미지는 필수입니다.
+required.joinFormNickName=가입시 닉네임은 필수입니다.
+range.joinFormPassword= 가입비밀번호는 {0}자리에서 {1}자리 사이로 입력해주세요.
+notEqal.joinFormPassword=확인 비밀번호가 같지 않습니다.
 
-range.password=비밀번호는 {0}자리에서 {1}자리 사이로 입력해주세요.
+#Object
 dont.passwordContainsNickName=비밀번호는 닉네임을 포함할 수 없습니다.
 
-only.img = 이미지 파일만 가능합니다.
-min.text = {1}자 이하로 써주세요.
+#Type
+only.img.org.springframework.web.multipart.MultipartFile = 이미지 파일만 가능합니다.
+min.java.lang.String = {1}자 이하로 써주세요.
+
+#code
+only.img = 이미지만 가능합니다.
+
+#Type Mismatch
+typeMismatch.java.lang.Integer = 숫자를 입력해주세요.
+typeMismatch = 타입 오류입니다.
