--- a/ourShef/src/main/resources/errors.properties
+++ b/ourShef/src/main/resources/errors.properties
@@ -1,9 +1,9 @@
 #Object Field
 
 #Field
-required.joinFormProfileImgFile=가입시 프로필 이미지는 필수입니다.
-required.joinFormNickName=가입시 닉네임은 필수입니다.
-range.joinFormPassword= 가입비밀번호는 {0}자리에서 {1}자리 사이로 입력해주세요.
+required.joinFormProfileImgFile=프로필 이미지는 필수입니다.
+required.joinFormNickName=닉네임은 필수입니다.
+range.joinFormPassword= 비밀번호는 {0}자리에서 {1}자리 사이로 입력해주세요.
 notEqal.joinFormPassword=확인 비밀번호가 같지 않습니다.
 
 #Object
@@ -19,3 +19,9 @@ only.img = 이미지만 가능합니다.
 #Type Mismatch
 typeMismatch.java.lang.Integer = 숫자를 입력해주세요.
 typeMismatch = 타입 오류입니다.
+
+#Bean Validation 
+#{0}은 필드명 출력
+NotBlank = 값을 입력해주세요.
+Range = {2} ~ {1} 사이값만 입력해주세요
+Max= 최대 {1}
