--- a/ourShef/src/main/resources/errors.properties
+++ b/ourShef/src/main/resources/errors.properties
@@ -5,6 +5,7 @@ required.joinFormProfileImgFile=프로필 이미지는 필수입니다.
 required.joinFormNickName=닉네임은 필수입니다.
 range.joinFormPassword= 비밀번호는 {0}자리에서 {1}자리 사이로 입력해주세요.
 notEqal.joinFormPassword=확인 비밀번호가 같지 않습니다.
+duplication.joinFormAccountId =이미 가입 된 아이디 입니다.
 
 #Object
 dont.passwordContainsNickName=비밀번호는 닉네임을 포함할 수 없습니다.
