--- a/ourShef/src/main/resources/application.yml
+++ b/ourShef/src/main/resources/application.yml
@@ -31,4 +31,4 @@ logging:
   
   
 file:
-  dir: C:/OurShefTestFoleder/
+  dir:     userProfileImg: C:/OurShefUserProfileImg/    spotMainImg: C:/OurShefSpotMainImg/    spotAddedImg: C:/OurShefSpotAddedImg/
