--- a/ourShef/src/main/resources/errors.properties
+++ b/ourShef/src/main/resources/errors.properties
@@ -29,4 +29,5 @@ typeMismatch = 타입 오류입니다.
 #{0}은 필드명 출력
 NotBlank = 값을 입력해주세요.
 Range = {2} ~ {1} 사이값만 입력해주세요
-Max= 최대 {1}
+Max= 최대 {1}이하로 해주세요
+Size= 최대 {1}글자 이하로 입력하세요
