AcquaintanceController createForm and requestRelationship function and relationshipRequestForm.html Update

--- a/ourShef/src/main/resources/errors.properties
+++ b/ourShef/src/main/resources/errors.properties
@@ -10,6 +10,9 @@ range.password= 비밀번호는 {0}자리에서 {1}자리 사이로 입력해주
 notEqal.joinFormPassword=확인 비밀번호가 같지 않습니다.
 notEqal.newPassword=확인 비밀번호가 같지 않습니다.
 duplication.joinFormAccountId =이미 가입 된 아이디 입니다.
+notExist.acquaintanceAccountId = 존재하지 않는 지인 아이디 입니다.
+already.requested.acquaintanceAccountId = 이미 지인 요청을 해놓은 유저입니다.
+already.exist.acquaintanceAccountId = 이미 지인으로 추가된 유저입니다. 
 
 NotEmpty.spotMainImg = 메인 사진은 필수입니다.
 NotEmpty.loginFormId = 아이디를 입력해주세요.
@@ -17,7 +20,7 @@ NotEmpty.loginFormPassword = 비밀번호를 입력해주세요.
 
 notMatch.password = 비밀번호가 일치하지 않습니다.
 
-#Object
+#Complex
 dont.passwordContainsNickName=비밀번호는 닉네임을 포함할 수 없습니다.
 dont.passwordContainsAccountId=비밀번호는 아이디를 포함할 수 없습니다.
 
