--- a/ourShef/src/main/resources/application.yml
+++ b/ourShef/src/main/resources/application.yml
@@ -2,7 +2,7 @@
   servlet:    session:      tracking-modes: cookie      timeout: 1800 #기본은 1800초(30분), 60초보다 작은 값은 설정 불가      
 spring:
   messages:
-    basename: errors
+    basename: errors      servlet:    multipart:      max-file-size: 5MB      max-request-size: 35MB              
 
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver
@@ -12,7 +12,7 @@ spring:
     
   jpa:
     hibernate:
-      ddl-auto: none
+      ddl-auto: create
     properties:
       hibernate:
 #        show_sql: true
@@ -31,4 +31,4 @@ logging:
   
   
 file:
-  dir:     userProfileImg: C:/OurShefUserProfileImg/    spotMainImg: C:/OurShefSpotMainImg/    spotAddedImg: C:/OurShefSpotAddedImg/    testImg: C:/OurShefTestImg/# It is injected from the Img controller, # but when there is no img by javascript in the client, # the logo in resources is directly requested without going through the controller, # so it is not the path used in the current version.      file:      demoImg: C:/OurShefDemoImg/shefmark.png
+  dir:     userProfileImg: C:/OurShefUserProfileImg/    spotMainImg: C:/OurShefSpotMainImg/    spotAddedImg: C:/OurShefSpotAddedImg/    testImg: C:/OurShefTestImg/# It is injected from the Img controller, # but when there is no img by javascript in the client, # the logo in resources is directly requested without going through the controller, # so it is not the path used in the current version.      file:      demoImg: C:/OurShefDemoImg/shefMark.png
